--- a/project-tracking-intro-component/index.html
+++ b/project-tracking-intro-component/index.html
@@ -34,12 +34,12 @@
       <li class="nav-item active">
         <a class="nav-link" href="#">Pricing</a>
       </li>
-      <div class="login">
+      <span class="login">
         <ul class="navbar-nav mr-auto">
         <li class="nav-item">
           <a class="nav-link" href="#">login</a>
         </li>
-      </div>
+      </span>
     </ul>
 
   </div>
